<resources>
    <string name="app_name">ImageDemo</string>
    <string name="image_demo">图像处理 Demo</string>
    <string name="primary_color">PRIMARY COLOR</string>
    <string name="change">CHANGE</string>
    <string name="reset">RESET</string>
    <string name="color_matrix">COLOR MATRIX</string>
    <string name="pixel_effect">PIXEL EFFECT</string>
    <string name="image_matrix">IMAGE MATRIX</string>
    <string name="round_rect">XFERMODE AND SHADER</string>
    <string name="reflect">REFLECT</string>
    <string name="mesh">MESH</string>
</resources>
