<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shmj.mouzhai.imagedemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/image_demo"
        android:textSize="40sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickPrimaryColor"
        android:text="@string/primary_color" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickColorMatrix"
        android:text="@string/color_matrix" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickPixelEffect"
        android:text="@string/pixel_effect" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickImageMatrix"
        android:text="@string/image_matrix" />
</LinearLayout>
